<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/signUp_firstName_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.5"
                    android:hint="@string/firstName_str"
                    android:textAllCaps="false"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/signUp_lastName_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.5"
                    android:hint="@string/lastName_str"
                    android:textAllCaps="false"
                    android:textSize="15dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/signUp_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/username_str"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/signUp_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_str"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/signUp_conf_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/confPass_str"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signUp_signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/signUp_str"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>