<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_horizontal_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/quarter_up_horizontal_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/quarter_down_horizontal_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/welcome_text"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/library_movie_iv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/library_movie_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/half_horizontal_guide"
        android:background="@color/white"
        android:src="@drawable/image" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/username_str"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/half_horizontal_guide"
        app:layout_constraintVertical_weight="1" />
    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_str"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/username_et"
        app:layout_constraintBottom_toTopOf="@+id/quarter_up_horizontal_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/signIn_str"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:backgroundTint="@color/purple_700"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/quarter_up_horizontal_guide"
        app:layout_constraintBottom_toTopOf="@+id/toSignUpPage_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/toSignUpPage_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/signUp_str"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn"
        app:layout_constraintBottom_toTopOf="@+id/quarter_down_horizontal_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>