<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddEditMovie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_str"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/add_movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top|start"
                android:hint="@string/desc_str"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="vertical"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dropdown"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/second_horizontal_guide"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_horizontal_guide" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/movieYear_et"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="date"
                    android:hint="@string/published_date_str"
                    android:focusable="false"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/third_horizontal_guide"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/vertical_guide"
                    app:layout_constraintTop_toBottomOf="@+id/second_horizontal_guide" />

                <ImageView
                    android:id="@+id/movieDate_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_date_range_24"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/third_horizontal_guide"
                    app:layout_constraintLeft_toRightOf="@+id/vertical_guide"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/second_horizontal_guide" />
            </LinearLayout>


            <EditText
                android:id="@+id/rate_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/rate_str"
                android:inputType="number"
                android:textAllCaps="false"

                android:textSize="15sp" />

            <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dropdown"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/second_horizontal_guide"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_horizontal_guide" />

            <EditText
                android:id="@+id/cast_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="top|start"
                android:hint="@string/cast_str"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="vertical"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addSaveMovie_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:text="@string/save_str"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>